# 1v.alert.API-python

.github/copilot/: 01-backend-python.md
.github/workflows/: build-push-acr.yml  deploy-aks.yml  deploy-aks1.yml
backend-python/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_api.py
backend-python/.github/workflows/: ci.yml  deploy-aks.yml
backend-python/alembic/: env.py
backend-python/alembic/versions/: 20250302000000_initial.py
backend-python/app/: __init__.py  main.py
backend-python/app/api/: alertdefs.py  auth.py  health.py  router.py
backend-python/app/core/: __init__.py  config.py  deps.py  errors.py  logging.py  security.py
backend-python/app/db/: __init__.py  base.py  session.py
backend-python/app/middleware/: __init__.py  correlation_id.py  exception_handler.py
backend-python/app/models/: __init__.py  alertdef.py  refresh_token.py  user.py
backend-python/app/repositories/: __init__.py  alertdef_repo.py  refresh_token_repo.py  user_repo.py
backend-python/app/schemas/: alertdef.py  auth.py  common.py  user.py
backend-python/app/services/: __init__.py  alertdef_service.py  auth_service.py
backend-python/scripts/: entrypoint.sh
backend-python/tests/: conftest.py  test_alertdefs.py  test_auth.py  test_health.py
